dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/PracticeEfficiencyReviewV2__c.object-meta.xml
<CustomObject>
    <description>UKIHARM-188: Practice Efficiency Review Version 2</description>
    <label>Practice Efficiency Review</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}{0000}</displayFormat>
        <label>Review Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Practice Efficiency Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>