dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/AutomateTools__c.field-meta.xml
<CustomField>
    <fullName>AutomateTools__c</fullName>
    <description>What tools do you use to automate data capture and processes?</description>
    <inlineHelpText>What tools do you use to automate data capture and processes?</inlineHelpText>
    <label>Automate Tools</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hubdoc</fullName>
            </value>
            <value>
                <fullName>Auto Entry</fullName>
            </value>
            <value>
                <fullName>Dext</fullName>
            </value>
            <value>
                <fullName>Paperless</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>