dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/AutomateToolsOtherText__c.field-meta.xml
<CustomField>
    <fullName>AutomateToolsOtherText__c</fullName>
    <description>What tools do you use to automate data capture and processes?[up to 50 characters]</description>
    <inlineHelpText>What tools do you use to automate data capture and processes?[up to 50 characters]</inlineHelpText>
    <label>Automate Tools(Other)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>