dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/BillingCity__c.field-meta.xml
<CustomField>
    <fullName>BillingCity__c</fullName>
    <description>Populated from Account- Billing Address. Field to be stored in the back-end, to be used for Reporting</description>
    <inlineHelpText>Populated from Account- Billing Address. Field to be stored in the back-end, to be used for Reporting</inlineHelpText>
    <label>BillingCity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>