dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/BillingCountry__c.field-meta.xml
<CustomField>
    <fullName>BillingCountry__c</fullName>
    <description>Populated from Account- Billing Address. Field to be stored in the back-end, to be used for Reporting</description>
    <label>BillingCountry</label>
    <length>50</length>
    <type>Text</type>
</CustomField>