dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/BookkeepingCloudAccounting__c.field-meta.xml
<CustomField>
    <fullName>BookkeepingCloudAccounting__c</fullName>
    <description>How many of your clients use the Bookkeeping-Sage Cloud Accounting solution?[up to 5 digits]</description>
    <inlineHelpText>How many of your clients use the Bookkeeping-Sage Cloud Accounting solution?[up to 5 digits]</inlineHelpText>
    <label>Sage Cloud Accounting</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>