dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/BookkeepingFreeAgent__c.field-meta.xml
<CustomField>
    <fullName>BookkeepingFreeAgent__c</fullName>
    <description>How many of your clients use the Bookkeeping-FreeAgent solution?[up to 5 digits]</description>
    <inlineHelpText>How many of your clients use the Bookkeeping-FreeAgent solution?[up to 5 digits]</inlineHelpText>
    <label>FreeAgent</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>