dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/BookkeepingOther__c.field-meta.xml
<CustomField>
    <fullName>BookkeepingOther__c</fullName>
    <description>How many of your clients use the Bookkeeping-Other solution?[up to 5 digits]</description>
    <inlineHelpText>How many of your clients use the Bookkeeping-Other solution?[up to 5 digits]</inlineHelpText>
    <label>Other</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>