dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/BookkeepingQBO__c.field-meta.xml
<CustomField>
    <fullName>BookkeepingQBO__c</fullName>
    <description>How many of your clients use the Bookkeeping-QBO solution?[up to 5 digits]</description>
    <inlineHelpText>How many of your clients use the Bookkeeping-QBO solution?[up to 5 digits]</inlineHelpText>
    <label>QBO</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>