dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/BookkeepingSage50__c.field-meta.xml
<CustomField>
    <fullName>BookkeepingSage50__c</fullName>
    <description>How many of your clients use the Bookkeeping-Sage50 solution?[up to 5 digits]</description>
    <inlineHelpText>How many of your clients use the Bookkeeping-Sage50 solution?[up to 5 digits]</inlineHelpText>
    <label>Sage 50</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>