dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/BookkeepingXero__c.field-meta.xml
<CustomField>
    <fullName>BookkeepingXero__c</fullName>
    <description>How many of your clients use the Bookkeeping-Xero solution?[up to 5 digits]</description>
    <inlineHelpText>How many of your clients use the Bookkeeping-Xero solution?[up to 5 digits]</inlineHelpText>
    <label>Xero</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>