dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/BrandCloudAccounting__c.field-meta.xml
<CustomField>
    <fullName>BrandCloudAccounting__c</fullName>
    <description>Which of the Brand-Sage Cloud Accounting do you?</description>
    <inlineHelpText>Which of the Brand-Sage Cloud Accounting do you?</inlineHelpText>
    <label>Sage Cloud Accounting</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refer/Resell</fullName>
            </value>
            <value>
                <fullName>Recommend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>