dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/BrandOtherText__c.field-meta.xml
<CustomField>
    <fullName>BrandOtherText__c</fullName>
    <description>Which of the following brands do you?[up to 50 characters]</description>
    <inlineHelpText>Which of the following brands do you?[up to 50 characters]</inlineHelpText>
    <label>Brand (Other)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>