dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/ClientName__c.field-meta.xml
<CustomField>
    <fullName>ClientName__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Contact who conduct the survey</description>
    <inlineHelpText>The Contact who conduct the survey</inlineHelpText>
    <label>Client Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>PracticeEfficiencyReviews</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>