dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>ClosedDate__c</fullName>
    <description>Automatically updates when the review automatically closes on 31st March and 30th September</description>
    <inlineHelpText>Automatically updates when the review automatically closes on 31st March and 30th September</inlineHelpText>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>