dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/ContactNotes__c.field-meta.xml
<CustomField>
    <fullName>ContactNotes__c</fullName>
    <description>Contain the additional information about selected contact [up to 255 characters]</description>
    <inlineHelpText>Contain the additional information about selected contact [up to 255 characters]</inlineHelpText>
    <label>Contact Notes</label>
    <type>TextArea</type>
</CustomField>