dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/LocalCRMAccountID__c.field-meta.xml
<CustomField>
    <fullName>LocalCRMAccountID__c</fullName>
    <description>Pre-populated with the Local CRM Account ID from the Account</description>
    <inlineHelpText>Pre-populated with the Local CRM Account ID from the Account</inlineHelpText>
    <label>Local CRM Account ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>