dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/NewStaff__c.field-meta.xml
<CustomField>
    <fullName>NewStaff__c</fullName>
    <description>How many new staff do you intend to hire in the next 12 months?</description>
    <inlineHelpText>How many new staff do you intend to hire in the next 12 months?</inlineHelpText>
    <label>New staff in the next 12 months?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>We&apos;ve reduced headcount</fullName>
            </value>
            <value>
                <fullName>Stayed the same</fullName>
            </value>
            <value>
                <fullName>1 to 5</fullName>
            </value>
            <value>
                <fullName>6 to 10</fullName>
            </value>
            <value>
                <fullName>11+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>