dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/NewTech__c.field-meta.xml
<CustomField>
    <fullName>NewTech__c</fullName>
    <description>Have you adopted new technologies to fuel growth and efficiency?</description>
    <inlineHelpText>Have you adopted new technologies to fuel growth and efficiency?</inlineHelpText>
    <label>New technologies?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, in the last 6 months</fullName>
            </value>
            <value>
                <fullName>Yes, in the last 12 months</fullName>
            </value>
            <value>
                <fullName>Yes, in the last 2 years</fullName>
            </value>
            <value>
                <fullName>Yes, historically</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>