dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Please provide any additional feedback [up to 255 characters].</description>
    <inlineHelpText>Please provide any additional feedback [up to 255 characters].</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>