dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/NumberOfAccountManually__c.field-meta.xml
<CustomField>
    <fullName>NumberOfAccountManually__c</fullName>
    <description>How many still manage their accounts manually?[up to 5 digits]</description>
    <inlineHelpText>How many still manage their accounts manually?[up to 5 digits]</inlineHelpText>
    <label>How many are accounts manually?</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>