dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/NumberOfBookKeeping__c.field-meta.xml
<CustomField>
    <fullName>NumberOfBookKeeping__c</fullName>
    <description>How many do you do end-to-end bookkeeping with? [up to 5 digits]</description>
    <inlineHelpText>How many do you do end-to-end bookkeeping with? [up to 5 digits]</inlineHelpText>
    <label>How many are end-to-end bookkeeping?</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>