dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/NumberOfBusinessClients__c.field-meta.xml
<CustomField>
    <fullName>NumberOfBusinessClients__c</fullName>
    <description>How many are business clients? Ltds, LLPs, sole traders and charities [up to 5 digits]</description>
    <inlineHelpText>How many are business clients? Ltds, LLPs, sole traders and charities [up to 5 digits]</inlineHelpText>
    <label>How many are business clients?</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>