dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/NumberOfClients__c.field-meta.xml
<CustomField>
    <fullName>NumberOfClients__c</fullName>
    <description>The number of clients [up to 5 digits]</description>
    <inlineHelpText>The number of clients [up to 5 digits]</inlineHelpText>
    <label>How many clients do you have?</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>