dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/NumberOfPayrollServices__c.field-meta.xml
<CustomField>
    <fullName>NumberOfPayrollServices__c</fullName>
    <description>How many clients do you provide Payroll services to?[up to 5 digits]</description>
    <inlineHelpText>How many clients do you provide Payroll services to?[up to 5 digits]</inlineHelpText>
    <label>Number of Payroll services</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>