dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/NumberOfTax__c.field-meta.xml
<CustomField>
    <fullName>NumberOfTax__c</fullName>
    <description>How many do you do personal tax returns for? [up to 5 digits]</description>
    <inlineHelpText>How many do you do personal tax returns for? [up to 5 digits]</inlineHelpText>
    <label>How many are personal tax returns?</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>