dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/PayrollBrightpay__c.field-meta.xml
<CustomField>
    <fullName>PayrollBrightpay__c</fullName>
    <description>How many of your client use the Payroll-Brightpay Payroll solution?[up to 5 digits]</description>
    <inlineHelpText>How many of your client use the Payroll-Brightpay Payroll solution?[up to 5 digits]</inlineHelpText>
    <label>Brightpay</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>