dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/PayrollIris__c.field-meta.xml
<CustomField>
    <fullName>PayrollIris__c</fullName>
    <description>How many of your client use the Payroll-Iris products (Kashflow etc) solution?[up to 5 digits]</description>
    <inlineHelpText>How many of your client use the Payroll-Iris products (Kashflow etc) solution?[up to 5 digits]</inlineHelpText>
    <label>Iris products (Kashflow etc)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>