dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/PayrollKeyPay__c.field-meta.xml
<CustomField>
    <fullName>PayrollKeyPay__c</fullName>
    <description>How many of your client use the Payroll-Key Pay solution?[up to 5 digits]</description>
    <inlineHelpText>How many of your client use the Payroll-Key Pay solution?[up to 5 digits]</inlineHelpText>
    <label>Key Pay</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>