dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/PayrollMoneysoft__c.field-meta.xml
<CustomField>
    <fullName>PayrollMoneysoft__c</fullName>
    <description>How many of your client use the Payroll-Moneysoft Payroll solution?[up to 5 digits]</description>
    <inlineHelpText>How many of your client use the Payroll-Moneysoft Payroll solution?[up to 5 digits]</inlineHelpText>
    <label>Moneysoft</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>