dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/PayrollOtherText__c.field-meta.xml
<CustomField>
    <fullName>PayrollOtherText__c</fullName>
    <description>How many of your client use the Payroll-Other solution??[up to 50 characters]</description>
    <inlineHelpText>How many of your client use the Payroll-Other solution??[up to 50 characters]</inlineHelpText>
    <label>Payroll(Other)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>