dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/PayrollSage50cPayroll__c.field-meta.xml
<CustomField>
    <fullName>PayrollSage50cPayroll__c</fullName>
    <description>How many of your client use the Payroll-Sage 50c Payroll solution?[up to 5 digits]</description>
    <inlineHelpText>How many of your client use the Payroll-Sage 50c Payroll solution?[up to 5 digits]</inlineHelpText>
    <label>Sage 50c Payroll</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>