dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/PayrollSageCloud__c.field-meta.xml
<CustomField>
    <fullName>PayrollSageCloud__c</fullName>
    <description>How many of your client use the Payroll-Sage Business Cloud Payroll Payroll solution?[up to 5 digits]</description>
    <inlineHelpText>How many of your client use the Payroll-Sage Business Cloud Payroll Payroll solution?[up to 5 digits]</inlineHelpText>
    <label>Sage Business Cloud Payroll</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>