dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/PayrollStaffology__c.field-meta.xml
<CustomField>
    <fullName>PayrollStaffology__c</fullName>
    <description>How many of your client use the Payroll-Staffology Payroll solution?[up to 5 digits]</description>
    <inlineHelpText>How many of your client use the Payroll-Staffology Payroll solution?[up to 5 digits]</inlineHelpText>
    <label>Staffology</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>