dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/PayrollXero__c.field-meta.xml
<CustomField>
    <fullName>PayrollXero__c</fullName>
    <description>How many of your client use the Payroll-Sage Payroll solution?[up to 5 digits]</description>
    <inlineHelpText>How many of your client use the Payroll-Sage Payroll solution?[up to 5 digits]</inlineHelpText>
    <label>Xero</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>