dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/PracticeClientBase__c.field-meta.xml
<CustomField>
    <fullName>PracticeClientBase__c</fullName>
    <description>How important is growing client base?</description>
    <inlineHelpText>How important is growing client base?</inlineHelpText>
    <label>Growing client base</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not at all</fullName>
            </value>
            <value>
                <fullName>Not really</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Somewhat</fullName>
            </value>
            <value>
                <fullName>Very</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>