dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/PracticeCloud__c.field-meta.xml
<CustomField>
    <fullName>PracticeCloud__c</fullName>
    <description>How important are cloud solutions for your business?</description>
    <inlineHelpText>How important are cloud solutions for your business?</inlineHelpText>
    <label>Cloud solutions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not at all</fullName>
            </value>
            <value>
                <fullName>Not really</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Somewhat</fullName>
            </value>
            <value>
                <fullName>Very</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>