dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/PracticeFuture__c.field-meta.xml
<CustomField>
    <fullName>PracticeFuture__c</fullName>
    <description>How optimistic are you for the future of accounting?</description>
    <inlineHelpText>How optimistic are you for the future of accounting?</inlineHelpText>
    <label>The future of accounting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not at all</fullName>
            </value>
            <value>
                <fullName>Not really</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Somewhat</fullName>
            </value>
            <value>
                <fullName>Very</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>