dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/PracticeName__c.field-meta.xml
<CustomField>
    <fullName>PracticeName__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Look up an Account</description>
    <label>Practice Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>PracticeEfficiencyReviews</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>