dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/PracticeProfit__c.field-meta.xml
<CustomField>
    <fullName>PracticeProfit__c</fullName>
    <description>How important is making a profit from reselling software?</description>
    <inlineHelpText>How important is making a profit from reselling software?</inlineHelpText>
    <label>Making a profit from reselling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not at all</fullName>
            </value>
            <value>
                <fullName>Not really</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Somewhat</fullName>
            </value>
            <value>
                <fullName>Very</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>