dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/ReviewTitle__c.field-meta.xml
<CustomField>
    <fullName>ReviewTitle__c</fullName>
    <description>Pre-populate the Review Title with the Account Name, the Year Half and the Financial Year</description>
    <inlineHelpText>Pre-populate the Review Title with the Account Name, the Year Half and the Financial Year</inlineHelpText>
    <label>Review Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>